# benchmark-lbs

./: .gitignore  README.md  analyze_results.py  benchmark.sh  docker-compose.yml
backend/rust-backend/: Cargo.toml  Dockerfile
backend/rust-backend/src/: main.rs
caddy/: Caddyfile
certs/: server.crt  server.key  server.pem
haproxy/: haproxy.cfg
nginx/: nginx.conf
traefik/: dynamic.yml  traefik.yml
