[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10"
tokio-rustls = "0.25"
rustls = { version = "0.21", default-features = false, features = ["std"] }
rustls-pemfile = "1"
axum-server = { version = "0.6", features = ["tls-rustls"] }
